--- a/portfolioSite/style.css
+++ b/portfolioSite/style.css
@@ -1,23 +1,49 @@
+*{font-size:18px}
 nav
 {
   background-color: #ff702d;
+  border-bottom: 6px solid #be4b17;
 }
-nav ul{
-  margin: 0;
-  padding-left: 0;
-  font-size: 1.2em;
-  list-style-type: none;
+.topnav
+{ 
+  overflow:hidden;
 }
-nav li{border-bottom: 1px solid #000033}
+.topnav a
+{
+  float:left;
+  display:block;
+  background-color:#ffc35c;
+  color:black;
+  text-align: center;
+  font-size: 16px;
+  padding: 30px 40px;
+  margin:1%;
+  text-decoration:none;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.topnav a:hover
+{
+  background-color: #ddd;
+  color:black;
+}
+form 
+{ 
+  display: flex;
+  flex-flow: column nowrap;
+  width: 40%;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 6em 1fr;
+  grid-template-rows: auto auto;
+  margin: 20 auto;
+  background-color:#ffc35c;
+  border: 1px solid #be4b17;
+  padding-top: 3em;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 10em;
 
-form { display: flex;
-       flex-flow: column nowrap;
-        width: 60%;
-        display: grid;
-        grid-gap: 1em;
-        grid-template-columns: 6em 1fr;
-        grid-template-rows: auto auto;
-      }
+}
 input, textarea { margin-bottom: .5em; }
 input[type= "submit"]{
   grid-column: 2; /*may just be 2 */
@@ -27,16 +53,23 @@ imgCatalog{}
 imgCatalog ul {
   display: flex;
   flex-wrap: wrap;
-  border: 2px solid darkred;
+  list-style-type: none;
 }
-imgCatalog li {
-  height: 40vh;
+imgCatalog li 
+{
+  height: 50vh;
   flex-grow: 1;
 }
 
 img {
   max-height: 100%;
   min-width: 100%;
-  object-fit: cover;
+  object-fit:contain;
   vertical-align: bottom;
+  object-position: left;
+}
+
+body
+{
+  background-color:#fff9fb;
 }
